# soccer-api/app/Http/Controllers/GameMatchController.php
@@ -3,26 +3,52 @@
 namespace App\Http\Controllers;
 
 use App\Models\GameMatch;
+use App\Repositories\GameMatchRepository;
+use Illuminate\Contracts\Pagination\Paginator;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 
 class GameMatchController extends Controller
 {
+    public function __construct(protected GameMatchRepository $gameMatchRepository)
+    {
+        // TODO:
+    }
+
     /**
      * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *     path="/api/game_match",
+     *     description=" ",
+     *     tags={"Game Match"},
+     *     @OA\Parameter(name="team_id", in="query", description="Id of team", required=false,
+     *        @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="default", description="Welcome page")
+     * )
+     * @return Paginator
      */
-    public function index()
+    public function index(Request $request): Paginator
     {
         //
-        
+        $query = $this->gameMatchRepository
+            ->eloquentBuilder()
+            ->with(['home_team:id,name,city', 'away_team:id,name,city']);
+
+        if ($team = $request->team_id) {
+            $query->where('id_home', '=', $team)
+                ->orWhere('id_away', '=', $team);
+        }
+
+        $query->orderBy('start_time', 'asc');
+        return $query->simplePaginate(10);
     }
 
     /**
      * Store a newly created resource in storage.
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @param Request $request
+     * @return JsonResponse
      * @OA\Post(
      *     tags={"Game Match"},
      *     path="/api/game_match",
@@ -53,7 +79,7 @@ class GameMatchController extends Controller
      *     @OA\Response(response="default", description="Game match create response")
      * )
      */
-    public function store(Request $request)
+    public function store(Request $request): JsonResponse
     {
         $data = $request->only(['id_home', 'id_away', 'start_time', 'stadium']);
         $data["status"] = "not_started";
@@ -64,8 +90,8 @@ class GameMatchController extends Controller
     /**
      * Display the specified resource.
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @param int $id
+     * @return JsonResponse
      * @OA\Get(
      *     tags={"Game Match"},
      *     path="/api/game_match/{id}",
@@ -76,33 +102,37 @@ class GameMatchController extends Controller
      *     @OA\Response(response="default", description="Welcome page")
      * )
      */
-    public function show($id)
+    public function show(int $id): JsonResponse
     {
-        $query = GameMatch::query();
-        $match = $query->findOrFail($id)->load("home_team:id,name,city");
+        $match = $this->gameMatchRepository->gameMatchDetailData($id);
         return $this->sendResponse($match);
     }
 
     /**
      * Update the specified resource in storage.
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @param Request $request
+     * @param int $id
+     * @return JsonResponse
      */
-    public function update(Request $request, $id)
+    public function update(Request $request, int $id): JsonResponse
     {
-        //
+        $match = $this->gameMatchRepository->findOrFail($id);
+        $data = $request->only(["id_home", "id_away", "start_time", "stadium", "status"]);
+        $match->update($data);
+        return $this->updateSuccess($match);
     }
 
     /**
      * Remove the specified resource from storage.
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @param int $id
+     * @return JsonResponse
      */
-    public function destroy($id)
+    public function destroy(int $id): JsonResponse
     {
-        //
+        $match = $this->gameMatchRepository->findOrFail($id);
+        $match->delete();
+        return $this->deleteSuccess([]);
     }
 }
